added navbar component and component folder

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<div class="navbar-body">
+  <p class="username">Username</p>
+  <button class="btn-account">
+    <mat-icon class="btn-account-icon">account_circle</mat-icon>
+  </button>
+</div>
