added navbar component and remove mueffel

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <div class="navbar-body">
-  <p class="username">Username</p>
-  <button class="btn-account">
-    <mat-icon class="btn-account-icon">account_circle</mat-icon>
-  </button>
+  <div class="account-field">
+    <p class="username">Username</p>
+    <button class="btn-account">
+      <mat-icon class="btn-account-icon">account_circle</mat-icon>
+    </button>
+  </div>
 </div>
