--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,10 +5,10 @@
 }
 
 .widget {
-  border: 1px solid #000;
-  width: 700px;
-  height: 350px;
+  width: 800px;
+  height: 400px;
   border-radius: 25px;
-  box-shadow: 5px 5px 5px silver;
+  box-shadow: 0 0 10px black;
   margin: 10px;
+  background-color: white;
 }
