--- a/src/app/components/widgets/add/add.component.html
+++ b/src/app/components/widgets/add/add.component.html
@@ -1,1 +1,10 @@
-<p>add works!</p>
+<div class="add">
+    <div class="button">
+        <div class="plus">
+            <mat-icon class="add-icon">add_circle</mat-icon>
+        </div>
+        <div class="add-text">
+            Hinzufügen
+        </div>
+    </div>
+</div>
