added component and list view for items V1

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <div class="navbar-body">
+  <img src="/assets/ProjektLogoV3.png" alt="Logo des Unternehmens">
   <div class="account-field">
     <p class="username">Username</p>
     <button class="btn-account">
