--- a/src/app/components/widgets/tasks/tasks.component.html
+++ b/src/app/components/widgets/tasks/tasks.component.html
@@ -1,3 +1,7 @@
 <div class="top-bar">
     <a>Aufgaben</a>
 </div>
+<app-task-item></app-task-item>
+<app-task-item></app-task-item>
+<app-task-item></app-task-item>
+<app-task-item></app-task-item>
