--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar-body">
-  <img src="/assets/ProjektLogoV3.png" alt="Logo des Unternehmens">
-  <div class="account-field">
-    <p class="username">Username</p>
-    <button class="btn-account">
-      <mat-icon class="btn-account-icon">account_circle</mat-icon>
-    </button>
-  </div>
+	<img src="assets/ProjektLogo-V4.ico" alt="project-logo" class="project-logo" />
+	<div class="account-field">
+		<p class="username">Username</p>
+		<button class="btn-account">
+			<mat-icon class="btn-account-icon">account_circle</mat-icon>
+		</button>
+	</div>
 </div>
