--- a/src/app/components/widgets/tasks/task-item/task-item.component.scss
+++ b/src/app/components/widgets/tasks/task-item/task-item.component.scss
@@ -1,29 +1,28 @@
-.task-frame{
-  margin-bottom: 10px;
-  border-radius: 5px;
-  background: #C7CFD3;
-  height: 50px;
-  margin-left: 10px;
-  margin-right: 10px;
-  display: flex;
-  align-items: center;
+.task-frame {
+	margin-bottom: 10px;
+	border-radius: 5px;
+	background: #c7cfd3;
+	height: 50px;
+	margin-left: 10px;
+	margin-right: 10px;
+	display: flex;
+	align-items: center;
 }
-.task-frame:hover{
-  height: 55px;
-}
-
-.task-name{
-  margin-left: 10px;
-
+.task-frame:hover {
+	height: 55px;
 }
 
-.btn-task-menu{
-  margin-left: auto;
-  margin-right: 10px;
-  background: none;
-  border: none;
+.task-name {
+	margin-left: 10px;
 }
 
-.btn-task-menu-icon{
-  scale: 1.5;
+.btn-task-menu {
+	margin-left: auto;
+	margin-right: 10px;
+	background: none;
+	border: none;
+}
+
+.btn-task-menu-icon {
+	font-size: 2rem;
 }
