Added site-routing and corresponding site-blueprints

--- a/src/app/components/widgets/calendar/calendar.component.html
+++ b/src/app/components/widgets/calendar/calendar.component.html
@@ -1,3 +1,3 @@
-<div class="top-bar">
-    <a>Kalender</a>
+<div>
+    <button class="top-bar" (click)="openCalendarSite()">Kalender</button>
 </div>
