--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,2 @@
 <app-navbar></app-navbar>
-<div class="centered" style="display: flex">
-    <div class="widget">
-        <app-tasks></app-tasks>
-    </div>
-    <div class="widget">
-        <app-calendar></app-calendar>
-    </div>
-</div>
-<div class="centered" style="display: flex">
-    <div class="widget">
-        <app-reports></app-reports>
-    </div>
-    <div class="widget">
-        <app-add></app-add>
-    </div>
-</div>
+<router-outlet></router-outlet>
