--- a/src/app/components/widgets/reports/reports.component.html
+++ b/src/app/components/widgets/reports/reports.component.html
@@ -1,3 +1,3 @@
-<div class="top-bar">
-    <a>Berichtsheft und Notizen</a>
+<div>
+    <button class="top-bar" (click)="openReportsSite()">Berichtsheft</button>
 </div>
