Added back-button for widget-sites

--- a/src/app/components/sites/tasks-site/tasks-site.component.html
+++ b/src/app/components/sites/tasks-site/tasks-site.component.html
@@ -1,5 +1,9 @@
 <div class="full-widget">
     <div class="top-bar">
         <a>Aufgaben</a>
+        <button class="back-button" (click)="openHomeSite()">
+            <i class="material-icons">arrow_back</i>
+            <a>Zurück</a>
+        </button>
     </div>
 </div>
