--- a/src/app/components/sites/tasks-site/tasks-site.component.scss
+++ b/src/app/components/sites/tasks-site/tasks-site.component.scss
@@ -20,3 +20,16 @@
   border-radius: 22px 22px 0 0;
   font-size: 1.5rem;
 }
+
+.back-button{
+  border: none;
+  display: flex;
+  height: 60px;
+  justify-content: flex-end;
+  margin-left: auto;
+  background-color: #232f3e;
+  color: white;
+  align-items: center;
+  padding: 0 20px;
+  font-size: 1.5rem;
+}
