--- a/src/app/components/widgets/tasks/task-item/task-item.component.scss
+++ b/src/app/components/widgets/tasks/task-item/task-item.component.scss
@@ -1,15 +1,17 @@
 .task-frame {
+	padding-top: 5px;
+	border: 1px solid #ccc;
 	margin-bottom: 10px;
 	border-radius: 5px;
-	background: #c7cfd3;
-	height: 50px;
+	background: white;
+	height: fit-content;
 	margin-left: 10px;
 	margin-right: 10px;
 	display: flex;
 	align-items: center;
 }
 .task-frame:hover {
-	height: 55px;
+	box-shadow: 0 0 15px 0 rgba(0,0,0,0.5);
 }
 
 .task-name {
@@ -17,12 +19,35 @@
 }
 
 .btn-task-menu {
-	margin-left: auto;
-	margin-right: 10px;
-	background: none;
-	border: none;
+	margin: 0 10px auto auto;
 }
 
-.btn-task-menu-icon {
-	font-size: 2rem;
+.btn-task-menu:hover{
+	background-color: lightgray;
+}
+
+button mat-icon {
+	font-size: 1.5rem;
+	color: #555;
+}
+
+.task-container {
+	padding: 10px;
+	font-family: Arial, sans-serif;
+}
+
+.task-header {
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+	font-weight: bold;
+}
+
+.task-description {
+	margin-top: 10px;
+	color: #555;
+}
+
+.toggle-icon {
+	font-size: 20px;
 }
