--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,14 @@ html {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+  @include mat.tree-overrides((
+          container-background-color: none,
+          node-text-color: #1E2A3C,
+          node-text-size:1.5rem
+  ));
+  @include mat.menu-overrides((
+
+  ));
+}
