--- a/src/app/components/widgets/tasks/task-item/task-item.component.scss
+++ b/src/app/components/widgets/tasks/task-item/task-item.component.scss
@@ -51,3 +51,20 @@ button mat-icon {
 .toggle-icon {
 	font-size: 20px;
 }
+
+.category-button-frame{
+	display: flex;
+	margin-left: auto;
+	margin-bottom: auto;
+	align-items: center;
+}
+
+.category-frame{
+	height: fit-content;
+	display: flex;
+	align-items: center;
+	padding: 5px 10px 5px 10px;
+	border-radius: 5px;
+	background-color: lightgrey;
+	margin-right: 10px;
+}
