--- a/src/app/components/sites/home-site/home-site.component.scss
+++ b/src/app/components/sites/home-site/home-site.component.scss
@@ -5,10 +5,13 @@
 }
 
 .widget {
+  overflow: auto;
   width: 800px;
   height: 400px;
   border-radius: 25px;
   box-shadow: 0 0 10px black;
   margin: 10px;
   background-color: white;
+  scrollbar-width: thin;
 }
+
