--- a/src/app/components/widgets/tasks/tasks.component.scss
+++ b/src/app/components/widgets/tasks/tasks.component.scss
@@ -1,7 +1,8 @@
 .top-bar {
+  position: sticky;
+  z-index: 1000;
   border: none;
   top: 0;
-  left: 0;
   height: 60px;
   width: 100%;
   background-color: #232f3e;
