--- a/src/app/components/sites/home-site/home-site.component.scss
+++ b/src/app/components/sites/home-site/home-site.component.scss
@@ -5,13 +5,22 @@
 }
 
 .widget {
-  overflow: auto;
+  overflow: hidden;
   width: 800px;
   height: 400px;
   border-radius: 25px;
   box-shadow: 0 0 10px black;
   margin: 10px;
   background-color: white;
-  scrollbar-width: thin;
+  scrollbar-width: auto;
 }
+
+.background{
+  width: 100%;
+  height: 25px;
+  top: 0;
+
+  background: #232f3e;
+}
+
 
