--- a/src/app/components/sites/tasks-site/tasks-site.component.scss
+++ b/src/app/components/sites/tasks-site/tasks-site.component.scss
@@ -15,9 +15,9 @@
   background-color: #232f3e;
   color: white;
   display: flex;
+  border-radius: 25px 25px 0 0;
   align-items: center;
   padding: 0 20px;
-  border-radius: 22px 22px 0 0;
   font-size: 1.5rem;
 }
 
@@ -32,4 +32,5 @@
   align-items: center;
   padding: 0 20px;
   font-size: 1.5rem;
+  cursor: pointer;
 }
