--- a/src/app/components/sites/notes-site/notes-site.component.scss
+++ b/src/app/components/sites/notes-site/notes-site.component.scss
@@ -42,6 +42,7 @@
   margin-bottom: auto;
   padding: 20px;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .button-container {
@@ -65,7 +66,7 @@
 
 .add-note-window{
   height: 300px;
-  width: 100%;
+  width: 99%;
   text-align: left;
   vertical-align: top;
   padding: 2px;
