--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,4 @@
-<div class=""></div>
+<div class="footer">
+  <a href="https://www.brainyquote.com/topics/motivational-quotes">Impressum</a>
+  <a href="https://www.brainyquote.com/topics/motivational-quotes">Datenschutz</a>
+</div>
