feature branch für kalender - mm

--- a/src/app/components/sites/home-site/home-site.component.html
+++ b/src/app/components/sites/home-site/home-site.component.html
@@ -1,12 +1,14 @@
 <div class="centered" style="display: flex">
+</div>
+<div class="centered" style="display: flex">
+</div>
+<div class="home-grid">
     <div class="widget">
         <app-tasks></app-tasks>
     </div>
     <div class="widget">
         <app-calendar></app-calendar>
     </div>
-</div>
-<div class="centered" style="display: flex">
     <div class="widget">
         <app-notes></app-notes>
     </div>
