--- a/src/app/components/widgets/calendar/calendar.component.html
+++ b/src/app/components/widgets/calendar/calendar.component.html
@@ -1,3 +1,9 @@
 <div>
     <button class="top-bar" (click)="openCalendarSite()">Kalender</button>
 </div>
+
+
+<mat-card class="demo-inline-calendar-card">
+    <mat-calendar [(selected)]="selected"></mat-calendar>
+</mat-card>
+<p>Selected date: {{selected()}}</p>
