kalender angepasst an widget, liste daneben WIP

--- a/src/app/components/widgets/calendar/calendar.component.scss
+++ b/src/app/components/widgets/calendar/calendar.component.scss
@@ -14,5 +14,10 @@
 }
 
 .demo-inline-calendar-card {
-  width: 300px;
+  width: 43%;
+  justify-self: start;
+  margin: 10px;
+  object-fit: fill;
 }
+
+
