--- a/src/app/components/widgets/notes/notes.component.scss
+++ b/src/app/components/widgets/notes/notes.component.scss
@@ -12,3 +12,9 @@
   border-radius: 22px 22px 0 0;
   font-size: 1.5rem;
 }
+
+.widget-body {
+  padding-top: 10px;
+  overflow: auto;
+  height: 320px;
+}
