--- a/src/app/components/sites/tasks-site/tasks-site.component.html
+++ b/src/app/components/sites/tasks-site/tasks-site.component.html
@@ -1,9 +1,24 @@
 <div class="full-widget">
     <div class="top-bar">
-        <a>Aufgaben</a>
+        <a class="titel">Aufgaben</a>
         <button class="back-button" (click)="openHomeSite()">
             <i class="material-icons">arrow_back</i>
             <a>Zurück</a>
         </button>
     </div>
+  <div class="form-frame">
+    <div class="input-form">
+      <p>Titel</p>
+      <input type="text">
+    </div>
+    <div class="input-form">
+      <p>Beschreibung</p>
+      <input type="text">
+    </div>
+    <div class="input-form">
+      <p>Tag</p>
+      <input type="text">
+    </div>
+    <button>Erstellen</button>
+  </div>
 </div>
