--- a/src/app/components/sites/tasks-site/tasks-site.component.scss
+++ b/src/app/components/sites/tasks-site/tasks-site.component.scss
@@ -1,15 +1,15 @@
 .full-widget{
   height: 850px;
+  margin: 10px 20%;
   border-radius: 25px;
   box-shadow: 0 0 10px black;
-  margin: 10px;
   background-color: white;
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .top-bar {
-  top: 0;
-  left: 0;
   height: 60px;
   width: 100%;
   background-color: #232f3e;
@@ -17,20 +17,47 @@
   display: flex;
   border-radius: 25px 25px 0 0;
   align-items: center;
-  padding: 0 20px;
   font-size: 1.5rem;
 }
 
 .back-button{
   border: none;
+  background: none;
   display: flex;
   height: 60px;
   justify-content: flex-end;
   margin-left: auto;
-  background-color: #232f3e;
   color: white;
   align-items: center;
   padding: 0 20px;
   font-size: 1.5rem;
   cursor: pointer;
+}
+
+.titel{
+  margin-left: 20px;
+}
+
+p{
+  margin: 15px 0 5px 0;
+}
+
+input{
+  height: 1.3rem;
+}
+
+button{
+  margin-top: 10px;
+  font-size: 1.2rem;
+  padding: 10px;
+  border: none;
+  color: white;
+  background: #232f3e;
+  border-radius: 10px;
+}
+
+.form-frame{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
